--- a/Tasks/Task 8/Task 8.csproj
+++ b/Tasks/Task 8/Task 8.csproj
@@ -48,5 +48,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LabFunctions\LabFunctions.csproj">
+      <Project>{74b7c380-afdc-4746-8775-d7bb49968238}</Project>
+      <Name>LabFunctions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
