--- a/Tasks/Task 8/Task 8.csproj
+++ b/Tasks/Task 8/Task 8.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Graph.cs" />
+    <Compile Include="GraphPeak.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
